--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-cljs-test": "^0.1.0",
     "karma-firefox-launcher": "^0.1.7",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-grid-layout": "^0.16.6",
+    "react": "^19.1.0",
+    "react-dom": "19.1.0",
+    "react-grid-layout": "^1.5.1",
     "react-icons": "^2.2.7",
     "react-test-renderer": "^16.4.1",
     "reakit": "^0.11.2",
