--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>clojure</artifactId>
-      <version>1.10.1</version>
+      <version>1.12.1</version>
     </dependency>
     <dependency>
       <groupId>cljsjs</groupId>
@@ -68,7 +68,7 @@
     <dependency>
       <groupId>com.fulcrologic</groupId>
       <artifactId>fulcro</artifactId>
-      <version>3.0.6</version>
+      <version>3.9.0-rc1</version>
     </dependency>
     <dependency>
       <groupId>cljsjs</groupId>
@@ -83,12 +83,12 @@
     <dependency>
       <groupId>com.fulcrologic</groupId>
       <artifactId>fulcro-garden-css</artifactId>
-      <version>3.0.6</version>
+      <version>3.1.1</version>
     </dependency>
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>core.async</artifactId>
-      <version>0.4.490</version>
+      <version>1.8.741</version>
     </dependency>
   </dependencies>
 </project>
