--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.awkay</groupId>
     <artifactId>workspaces</artifactId>
-    <version>1.1.2-SNAPSHOT</version>
+    <version>1.1.2</version>
     <name>workspaces</name>
     <description>A library for building React development cards</description>
     <properties>
@@ -22,7 +21,7 @@
         <url>https://github.com/awkay/workspaces</url>
         <connection>scm:git:git://github.com/awkay/workspaces.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/awkay/workspaces.git</developerConnection>
-        <tag>workspaces-1.1.1</tag>
+        <tag>workspaces-1.1.2</tag>
     </scm>
     <distributionManagement>
         <repository>
