--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "doc": "doc",
     "test": "test"
   },
-  "dependencies": {
-    "clipboard": "^1.6.1",
-    "highlight.js": "^11.11.1"
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
+  "devDependencies": {
+    "@playwright/test": "^1.57.0",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
     "karma-cljs-test": "^0.1.0",
-    "karma-firefox-launcher": "^0.1.7",
-    "react": "^19.1.0",
-    "react-dom": "19.1.0",
-    "react-grid-layout": "^1.5.2",
-    "react-icons": "^2.2.7",
-    "react-test-renderer": "^16.4.1",
-    "reakit": "^0.11.2",
-    "shadow-cljs": "^3.2.0"
+    "karma-firefox-launcher": "^2.1.3",
+    "shadow-cljs": "^2.28.20"
+  },
+  "dependencies": {
+    "clipboard": "^2.0.11",
+    "highlight.js": "^11.11.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-grid-layout": "1.2.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
