--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.awkay</groupId>
     <artifactId>workspaces</artifactId>
@@ -64,12 +65,12 @@
         <dependency>
             <groupId>org.clojure</groupId>
             <artifactId>clojure</artifactId>
-            <version>1.12.1</version>
+            <version>1.12.4</version>
         </dependency>
         <dependency>
             <groupId>com.fulcrologic</groupId>
             <artifactId>fulcro</artifactId>
-            <version>3.9.0-rc1</version>
+            <version>3.9.0</version>
         </dependency>
         <dependency>
             <groupId>com.wsscode</groupId>
